Improve editing points and fix deleting points (#8)
* Replace glitch icon

replaces the glitch icon because the current one isn't descriptive enough

* Update glitch.png

makes the glitch icon have a thicker black outline

* Update glitch.png

makes the glitch more distorted

* Improve UX for pc cursor positioning while editing

- Added two check to differentiate between a drag and a click
- Added a check that only allows the left mouse button to move the cursor

* Tweak drag conditions

You really only need to check if the mouse moved while the click was performed and that's plenty. That's why this change removes a lot of the condition-related stuff.

* Move stopPropagation back to onclick

Moves event.stopPropagation() back to map.onclick because without it, the drawer category will be deselected

* Improve editing points and fix deleting points

- fixed propagation not stopping when dragging outside of edit mode
- fixed the details panel not properly showing a scrollbar on larger screens
- fixed the details panel cutting off the category info on mobile
- fixed the bottom padding for details-panel-container on mobile
- added a controls div to the details div that contains a toggle focus button and view list button
- added a relocate pin button when editing a point
- fixed groups being improperly deleted
- fixed "Start a new blank map" breaking edit mode

* Update details.css

returned padding-bottom to its previous value since I'm not sure if that change was necessary

--- a/style/details.css
+++ b/style/details.css
@@ -19,8 +19,12 @@
     "icon name"
     "description description";
   align-items: center;
-  overflow-y: auto;
-  max-height: 50vh;
+  /* overflow-y: auto;
+  max-height: 50vh; */
+}
+
+#details-panel-container {
+	max-height: 100vh;
 }
 
 @media (max-width: 768px) {
@@ -126,7 +130,7 @@
   align-self: start;
 }
 
-.details-header .edit-mode {
+.details-header .edit-buttons {
   grid-column: 1 / 3;
   display: flex;
   gap: 20px;
